kubernetes/deployments/go-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-app
  labels:
    istio.io/dataplane-mode: ambient
