kubernetes/deployments/go-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
  namespace: go-app
  annotations:
    # This annotation tells ArgoCD Image Updater to write back to THIS file
    argocd-image-updater.argoproj.io/write-back-method: git
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
      - name: go-app
        image: us-central1-docker.pkg.dev/sre-portfolio-platform/my-artifact-repo/go-app:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
